# Flow

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  nx.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_template.md
.github/workflows/: lint.yml
.zed/: settings.json
back-end/: Cargo.toml  project.json
back-end/entity/: Cargo.toml
back-end/entity/src/: lib.rs  mod.rs  pass_key.rs  prelude.rs  space.rs  user.rs
back-end/errors/: Cargo.toml
back-end/errors/src/: lib.rs
back-end/event/: Cargo.toml
back-end/event/src/: lib.rs  source.rs  types.rs
back-end/migration/: Cargo.toml
back-end/migration/src/: lib.rs  m20250811_140008_create_space.rs  m20251001_170115_create_user.rs  m20251001_171250_create_passkey.rs
back-end/node/: Cargo.toml
back-end/node/src/: lib.rs  main.rs  runner.rs
back-end/node/src/api/: mod.rs  node.rs
back-end/node/src/api/servers/: app_state.rs  mod.rs  rest.rs  websocket.rs
back-end/node/src/bootstrap/: config.rs  init.rs
back-end/node/src/modules/: mod.rs  space.rs
back-end/node/src/modules/auth/: auth.rs  state.rs
back-end/node/src/modules/ssi/: did.rs  mod.rs
back-end/node/src/modules/ssi/did/: mod.rs  types.rs  util.rs
back-end/node/src/modules/ssi/did/resolvers/: adapter.rs  mod.rs  types.rs
back-end/node/src/modules/ssi/did/resolvers/peer/: document.rs  error.rs  generator.rs  mod.rs  parser.rs
back-end/node/src/modules/ssi/webauthn/: auth.rs  state.rs
back-end/node/src/modules/webauthn/: auth.rs
back-end/node/tests/: mod.rs
back-end/node/tests/api/: mod.rs
back-end/node/tests/api/rest/: health.rs  helpers.rs  mod.rs  space.rs
back-end/node/tests/api/rest/webauthn/: authentication.rs  mod.rs  registration.rs
back-end/node/tests/api/websocket/: mod.rs
back-end/node/tests/bootstrap/: config.rs  init.rs
back-end/node/tests/modules/ssi/: auth.rs  did.rs  did_resolver.rs  mod.rs
back-end/node/tests/modules/ssi/fixtures/: mod.rs
back-end/node/tests/modules/ssi/resolvers/: peer.rs
back-end/node/tests/util/: mod.rs  temp_env.rs
back-end/storage/core/: Cargo.toml
back-end/storage/core/src/: lib.rs  store.rs  types.rs
entity/: Cargo.toml
entity/src/: lib.rs  space.rs
errors/src/: lib.rs
event/: Cargo.toml
event/src/: lib.rs  source.rs  types.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250811_140008_create_space.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs  runner.rs
node/src/api/: node.rs
node/src/bootstrap/: config.rs  init.rs
node/src/modules/: mod.rs  space.rs
node/tests/bootstrap/: init.rs
specs/: 00_overview.md  01_storage_layer.md  02_access_auth_layer.md  03_network_layer.md  04_coordination_sync_layer.md  05_knowledge_graph.md  06_mcp.md  07_ui_ux_layer.md  08_agent_layer.md  09_execution_layer.md  10_compute_layer.md  11_incentive_layer.md  old_change_log.md
specs/changelog/: 2025-10-14.md
storage/core/: Cargo.toml
storage/core/src/: errors.rs  lib.rs  store.rs  types.rs
storage/src/: lib.rs  store.rs  types.rs
user-interface/: project.json
user-interface/flow-app/: README.md  app.json  package-lock.json  package.json  project.json
user-interface/flow-web/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  project.json  tsconfig.json  vite.config.ts
user-interface/flow-web/public/: electron.cjs  preload.cjs
user-interface/flow-web/scripts/: electron-dev.js  test-electron.js
user-interface/flow-web/src/: App.css  App.jsx  App.tsx  index.css
user-interface/flow-web/src/components/: ElectronInfo.css  ElectronInfo.jsx  FlowLogo.css  FlowLogo.jsx
user-interface/flow-web/src/types/: global.d.ts
user-interface/flow-web/src/utils/: logger.ts
