[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
event = { path = "../event" }
multibase = "0.9.1"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
storage = { path = "../storage" }
tempfile = "3.20.0"
