[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
entity = { path = "../entity" }
env_logger = "0.11.8"
errors = { path = "../errors" }
event = { path = "../event" }
log = "0.4.27"
migration = { path = "../migration" }
multibase = "0.9.1"
rand = "0.8"
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }

