[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
env_logger = "0.11.8"
log = "0.4.27"
multibase = "0.9.1"
rand = "0.8"
sha2 = "0.10.9"
tempfile = "3.20.0"

sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

entity = { path = "../entity" }
event = { path = "../event" }
errors = { path = "../errors" }
migration = { path = "../migration" }
webauthn-rs = "0.5.2"
sled = "0.34.7"
