[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
env_logger = "0.11.8"
log = "0.4.27"
multibase = "0.9.1"
rand = "0.8"
sha2 = "0.10.9"
tempfile = "3.20.0"

sea-orm = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }

entity = { path = "../entity" }
event = { path = "../event" }
errors = { path = "../errors" }
migration = { path = "../migration" }
webauthn-rs = "0.5.2"
sled = "0.34.7"
once_cell = "1.21.3"
axum = { version = "0.8.6", features = ["ws"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
base64 = "0.22.1"
ssi = "0.12.0"
serde_cbor = "0.11.2"
fs4 = { version = "0.13.1", features = ["async-std", "tokio"] }
serial_test = "3.2.0"
webauthn-authenticator-rs = { version = "0.5.2", features = ["softpasskey"] }
http-body-util = "0.1.3"
async-trait = "0.1.89"
urlencoding = "2.1.3"
url = "2.5.7"
thiserror.workspace = true
percent-encoding = "2.3.2"
