[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
errors = { path = "../../errors" }

